# steel_engine

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  config.h.in
assets/: terrainFragment.glsl  terrainVertex.glsl
assets/models/: FatTroll.mtl  xFatTroll.mtl
assets/shaders/: terrainFragment.glsl  terrainVertex.glsl  terrain_fragment.glsl  terrain_vertex.glsl  tetrisFragmentShader.glsl  tetrisVertexShader.glsl  trollFragment.glsl  troll_vertex.glsl
lib/: glad.c  glad.h
shaders/: fragmentShader.glsl  lightSourceShader.fs  lightSourceShader.vs  objects.fs  objects.vs  terrain.fs  terrain.vs  vertexShader.glsl
src/: Camera.cpp  Camera.h  GatesOfHell.cpp  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  config.h  gates_of_hell.cpp  main.cpp
src/games/: TerrainGenerationScene.cpp  TetrisScene.cpp
src/input/: InputHandler.cpp  InputHandler.h  input_handler.cpp  input_handler.h
src/math/: Vector.h  noise.h
src/mesh/: Mesh.cpp  Mesh.h
src/model/: Mesh.h  Model.h  model.h
src/objects/: Camera.cpp  Camera.h  DirectionalLight.cpp  DirectionalLight.h  camera.h  directional_light.cpp  directional_light.h
src/scenes/: FatOrcScene.cpp  TerrainGenerationScene.cpp  fat_orc_scene.cpp  terrain_generation_scene.cpp
src/terrain/: PerlinNoiseChunkGenerator.cpp  PerlinNoiseChunkGenerator.h  perlin_noise_chunk_generator.cpp  perlin_noise_chunk_generator.h  terrain.cpp  terrain.h
src/ui/: Display.cpp  Display.h  display.cpp  display.h
src/utils/: Scene.h  SceneManager.cpp  SceneManager.h  Shader.cpp  Shader.h  scene.h  scene_manager.cpp  scene_manager.h  shader.cpp  utils.cpp  utils.h
